<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">


    <ImageView
        app:layout_constraintBottom_toTopOf="@id/linearLayout2"

        android:id="@+id/imageView2"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo" />


    <cn.gavinliu.android.lib.shapedimageview.ShapedImageView
        app:shape_mode="round_rect"
        app:round_radius="7dp"
        app:stroke_width="1dp"
        app:stroke_color="@color/white"
        android:id="@+id/battery"
        android:layout_width="@dimen/_46sdp"
        android:layout_height="@dimen/_46sdp"
        android:src="@drawable/stylist_avatar"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


  <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btWifi"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:onClick="onClickShowWifi"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:src="@drawable/ic_wifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/input_textfield"
            android:hint="@string/user_name"
            android:layout_marginTop="10dp"
            android:id="@+id/email"
            android:padding="10dp"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_err"
            android:id="@+id/email_err"
            android:layout_marginBottom="-18dp"
            android:textColor="@color/error"
            android:visibility="gone" />


        <EditText
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/password"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_textfield"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="@dimen/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_err"
            android:layout_marginTop="-20dp"
            android:text="@string/password_err"
            android:textColor="@color/error"
            android:visibility="gone" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        android:layout_width="@dimen/round_button_diameter"
        android:layout_height="@dimen/round_button_diameter"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/btn"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="12dp"
        android:text="Sign In"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:onClick="onClickSignIn"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/sign_in"
        app:layout_constraintStart_toStartOf="@+id/sign_in"
        app:layout_constraintTop_toTopOf="@+id/sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>